Move selector to the correct place for better readability

--- a/wp-content/themes/pub/wporg-learn-2024/src/style/_sensei.scss
+++ b/wp-content/themes/pub/wporg-learn-2024/src/style/_sensei.scss
@@ -163,11 +163,11 @@ body.sensei {
 				}
 			}
 
-			.wp-block-sensei-lms-course-outline-module__lessons-title {
-				display: none;
-			}
-
 			.wp-block-sensei-lms-collapsible {
+				h3.wp-block-sensei-lms-course-outline-module__lessons-title {
+					display: none;
+				}
+
 				// lesson item that belongs to a module
 				> .wp-block-sensei-lms-course-outline-lesson:first-of-type {
 					padding-top: 5px;
